Bug 410543 - Missing entries in context menu/toolbar for adding certain widget types to component diagrams
Summary: Missing entries in context menu/toolbar for adding certain widget types to co...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-03 17:01 UTC by Ralf Habacker
Modified: 2019-08-08 22:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-08-03 17:01:39 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add component diagram
3a. inspect toolbar
3b. open context menu in component diagram

OBSERVED RESULT
The toolbar does not contain an entry for adding a subsystem and the context menu does not contain an entry for adding interface, ports and connections


EXPECTED RESULT
The mentioned entries should be available
Comment 1 Ralf Habacker 2019-08-06 16:07:49 UTC
(In reply to Ralf Habacker from comment #0)
> The toolbar does not contain an entry for adding a subsystem
According to https://developer.ibm.com/articles/the-component-diagram/#subsystems subsystems are components with a "subsystem" stereotype. The special subsystem widget therefore seems to be specific only to UML 1.4.
Comment 2 Ralf Habacker 2019-08-08 22:52:06 UTC
Git commit 8ca197f818b4045e8c7de5f41146a9f7d7d25426 by Ralf Habacker.
Committed on 08/08/2019 at 22:51.
Pushed by habacker into branch 'master'.

Add subsystem support to toolbar and context menu for component diagrams

If, after adding a subsystem, it is removed and restored, the value of the stereotype is lost.
FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +1    -0    umbrello/icons.qrc
M  +1    -0    umbrello/menus/widgetbasepopupmenu.cpp
M  +3    -0    umbrello/model_utils.cpp
M  +5    -0    umbrello/object_factory.cpp
M  +1    -0    umbrello/pics/CMakeLists.txt
A  +-    --    umbrello/pics/cursor-subsystem.png
M  +3    -0    umbrello/toolbarstateother.cpp
M  +2    -1    umbrello/uml1model/umlobject.h
M  +2    -9    umbrello/umlscene.cpp
M  +3    -0    umbrello/worktoolbar.cpp
M  +3    -1    umbrello/worktoolbar.h

https://commits.kde.org/umbrello/8ca197f818b4045e8c7de5f41146a9f7d7d25426