Add subsystem support to toolbar and context menu for component diagrams

If, after adding a subsystem, it is removed and restored, the value of the stereotype is lost.

BUG:410543
FIXED-IN:2.29.80 (KDE Applications 19.11.80)